<?xml version="1.0"?>
<package>
  <name>Ceres</name>
  <version>1.8.2</version>
  <description>A non-linear least squares minimizer.</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>

  <author>Sameer Agarwal</author>
  <author>Keir Mierle</author>

  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>eigen</build_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
